--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <!-- 配置属性 -->
     <properties>
         <website.version>1.0.0-SNAPSHOT</website.version>
-        <hasor.version>3.2.1</hasor.version>
+        <hasor.version>3.2.3-SNAPSHOT</hasor.version>
         <wtpversion>2.0</wtpversion>
         <downloadSources>true</downloadSources>
         <downloadJavadocs>true</downloadJavadocs>
